# fs-worker

./: .env.example  .gitignore  Cargo.toml  Makefile  README.md  build.rs  go.mod  go.sum  main.go  object-model.md
activities/: activities.go  exec.go  firecracker.go  init_branch.go  metrics.go  s3.go  template.go  types.go  zfs.go
monitoring/: docker-compose.yml  prometheus.yml
proto/: worker.proto
scripts/: .gitignore  _fc_init.sh  lib.sh  vm-build.sh  vm-logs.sh  vm-port-forward.sh  vm-provision.sh  vm-run.sh  vm-setup.sh  vm-shell.sh  vm-ssh-allow.sh  vm-stop.sh  vm-test.sh
scripts/fc-agent/: go.mod  main.go
src/: activities.rs  main.rs  zfs_service.rs
